--- a/directory/directory.html
+++ b/directory/directory.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2020-09-22 Tue 09:44 -->
+<!-- 2020-10-07 Wed 11:05 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Resource Directory</title>
@@ -249,31 +249,39 @@ for the JavaScript code in this tag.
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#orgd1dc1c3">1. Blogs/Websites</a>
+<li><a href="#orgcbba014">1. Blogs/Websites</a>
 <ul>
-<li><a href="#orgdb58516">1.1. Technical/Scientific</a>
+<li><a href="#org8f5ff3d">1.1. Technical/Scientific</a>
 <ul>
-<li><a href="#org651095b">1.1.1. <i>bactra.org</i>, the website and blog of Cosma Rohilla Shaliz. [http://bactra.org/]</a></li>
-<li><a href="#org2b69020">1.1.2. <i>gwern.net</i>, the website and blog of Gwern Branwen. [https://www.gwern.net/]</a></li>
-<li><a href="#org214bad5">1.1.3. <i>guzey.com</i>, the website and blog of Alexey Guzey</a></li>
+<li><a href="#org28b5af4">1.1.1. <i>bactra.org</i>, the website and blog of Cosma Rohilla Shaliz. [http://bactra.org/]</a></li>
+<li><a href="#org16c9a6a">1.1.2. <i>gwern.net</i>, the website and blog of Gwern Branwen. [https://www.gwern.net/]</a></li>
+<li><a href="#orgd7dd27a">1.1.3. <i>guzey.com</i>, the website and blog of Alexey Guzey</a></li>
+<li><a href="#org1ace103">1.1.4. <i>Terry Tao's Blog</i>, where Terry Tao (the Fields medalist super-genius) writes [https://terrytao.wordpress.com/]</a></li>
+<li><a href="#orge851784">1.1.5. <i>Dror Bar-Natan's Website</i>, full of resources/posts written by the notable mathematician [https://www.math.toronto.edu/~drorbn/]</a></li>
+<li><a href="#orge7cefa3">1.1.6. <i>spinor.info</i>, Viktor Toth's (independent physicist and programmer) blog [https://spinor.info/weblog/]</a></li>
 </ul>
 </li>
+</ul>
+</li>
+<li><a href="#orgaa001c0">2. Papers</a>
+<ul>
+<li><a href="#orga715381">2.1. Haven't Read (Yet)</a></li>
 </ul>
 </li>
 </ul>
 </div>
 </div>
 
-<div id="outline-container-orgd1dc1c3" class="outline-2">
-<h2 id="orgd1dc1c3"><span class="section-number-2">1</span> Blogs/Websites</h2>
+<div id="outline-container-orgcbba014" class="outline-2">
+<h2 id="orgcbba014"><span class="section-number-2">1</span> Blogs/Websites</h2>
 <div class="outline-text-2" id="text-1">
 </div>
-<div id="outline-container-orgdb58516" class="outline-3">
-<h3 id="orgdb58516"><span class="section-number-3">1.1</span> Technical/Scientific</h3>
+<div id="outline-container-org8f5ff3d" class="outline-3">
+<h3 id="org8f5ff3d"><span class="section-number-3">1.1</span> Technical/Scientific</h3>
 <div class="outline-text-3" id="text-1-1">
 </div>
-<div id="outline-container-org651095b" class="outline-4">
-<h4 id="org651095b"><span class="section-number-4">1.1.1</span> <i>bactra.org</i>, the website and blog of Cosma Rohilla Shaliz. [<a href="http://bactra.org/">http://bactra.org/</a>]</h4>
+<div id="outline-container-org28b5af4" class="outline-4">
+<h4 id="org28b5af4"><span class="section-number-4">1.1.1</span> <i>bactra.org</i>, the website and blog of Cosma Rohilla Shaliz. [<a href="http://bactra.org/">http://bactra.org/</a>]</h4>
 <div class="outline-text-4" id="text-1-1-1">
 <p>
 The majority of writing on this website relates to computation and other technical scientific topics, as well as some 
@@ -290,18 +298,53 @@ great book reviews.
 </div>
 </div>
 
-<div id="outline-container-org2b69020" class="outline-4">
-<h4 id="org2b69020"><span class="section-number-4">1.1.2</span> <i>gwern.net</i>, the website and blog of Gwern Branwen. [<a href="https://www.gwern.net/">https://www.gwern.net/</a>]</h4>
+<div id="outline-container-org16c9a6a" class="outline-4">
+<h4 id="org16c9a6a"><span class="section-number-4">1.1.2</span> <i>gwern.net</i>, the website and blog of Gwern Branwen. [<a href="https://www.gwern.net/">https://www.gwern.net/</a>]</h4>
 </div>
-<div id="outline-container-org214bad5" class="outline-4">
-<h4 id="org214bad5"><span class="section-number-4">1.1.3</span> <i>guzey.com</i>, the website and blog of Alexey Guzey</h4>
+<div id="outline-container-orgd7dd27a" class="outline-4">
+<h4 id="orgd7dd27a"><span class="section-number-4">1.1.3</span> <i>guzey.com</i>, the website and blog of Alexey Guzey</h4>
+</div>
+<div id="outline-container-org1ace103" class="outline-4">
+<h4 id="org1ace103"><span class="section-number-4">1.1.4</span> <i>Terry Tao's Blog</i>, where Terry Tao (the Fields medalist super-genius) writes [<a href="https://terrytao.wordpress.com/">https://terrytao.wordpress.com/</a>]</h4>
+</div>
+<div id="outline-container-orge851784" class="outline-4">
+<h4 id="orge851784"><span class="section-number-4">1.1.5</span> <i>Dror Bar-Natan's Website</i>, full of resources/posts written by the notable mathematician [<a href="https://www.math.toronto.edu/~drorbn/">https://www.math.toronto.edu/~drorbn/</a>]</h4>
+</div>
+<div id="outline-container-orge7cefa3" class="outline-4">
+<h4 id="orge7cefa3"><span class="section-number-4">1.1.6</span> <i>spinor.info</i>, Viktor Toth's (independent physicist and programmer) blog [<a href="https://spinor.info/weblog/">https://spinor.info/weblog/</a>]</h4>
+</div>
+</div>
+</div>
+<div id="outline-container-orgaa001c0" class="outline-2">
+<h2 id="orgaa001c0"><span class="section-number-2">2</span> Papers</h2>
+<div class="outline-text-2" id="text-2">
+</div>
+<div id="outline-container-orga715381" class="outline-3">
+<h3 id="orga715381"><span class="section-number-3">2.1</span> Haven't Read (Yet)</h3>
+<div class="outline-text-3" id="text-2-1">
+<ul class="org-ul">
+<li>Entanglement rate and area laws [<a href="https://arxiv.org/pdf/1304.5931.pdf">https://arxiv.org/pdf/1304.5931.pdf</a>]</li>
+<li>Adiabaticity in open systems [<a href="https://t.co/WGyStuVcI2?amp=1">https://t.co/WGyStuVcI2?amp=1</a>]</li>
+<li>Generalized Fisher information [<a href="https://arxiv.org/abs/2010.02904">https://arxiv.org/abs/2010.02904</a>]</li>
+<li>Wolfram physics quantum information [<a href="https://arxiv.org/abs/2010.02752">https://arxiv.org/abs/2010.02752</a>]</li>
+<li>Thermodynamics of strongly-coupled light/matter systems [<a href="https://doi.org/10.22331/q-2020-09-28-335">https://doi.org/10.22331/q-2020-09-28-335</a>]</li>
+<li>De-signing Hamiltonians [<a href="https://doi.org/10.22331/q-2020-09-24-334">https://doi.org/10.22331/q-2020-09-24-334</a>]</li>
+<li>Quantum search on vertex transitive graphs [<a href="https://arxiv.org/abs/2002.11227">https://arxiv.org/abs/2002.11227</a>]</li>
+<li>Hypergraph states [<a href="https://arxiv.org/abs/1211.5554">https://arxiv.org/abs/1211.5554</a>]</li>
+<li>Phase transitions and persistent homology [<a href="https://arxiv.org/abs/2009.14231">https://arxiv.org/abs/2009.14231</a>]</li>
+<li>Scrambling unitaries [<a href="https://scirate.com/arxiv/2009.14808">https://scirate.com/arxiv/2009.14808</a>]</li>
+<li>Manifold optimization/Gaussian states [<a href="https://scirate.com/arxiv/2009.11884">https://scirate.com/arxiv/2009.11884</a>]</li>
+<li>Non-locality of observables in quasi-Hermitian quantum theory [<a href="https://arxiv.org/abs/2002.04703">https://arxiv.org/abs/2002.04703</a>]</li>
+<li>Variational fast-forwarding [<a href="https://arxiv.org/abs/1910.04292">https://arxiv.org/abs/1910.04292</a>]</li>
+<li>Meta-VQE [<a href="https://arxiv.org/abs/2009.13545">https://arxiv.org/abs/2009.13545</a>]</li>
+</ul>
 </div>
 </div>
 </div>
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: Jack Ceroni</p>
-<p class="date">Created: 2020-09-22 Tue 09:44</p>
+<p class="date">Created: 2020-10-07 Wed 11:05</p>
 <p class="validation"><a href="http://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
