--- a/munkres/index.html
+++ b/munkres/index.html
@@ -29,7 +29,12 @@
     <p>Section 20: <a href="https://lucaman99.github.io/munkres/20/3.html">Problem 3 (Incomplete)</a>, <a href="https://lucaman99.github.io/munkres/20/9.html">Problem 9</a>, <a href="https://lucaman99.github.io/munkres/20/11.html">Problem 11</a></p>
     <p>Section 21: <a href="https://lucaman99.github.io/munkres/21/8.html">Problem 8</a>, <a href="https://lucaman99.github.io/munkres/21/11.html">Problem 11</a></p>
     <p>Topological Groups: <a href="https://lucaman99.github.io/munkres/Top_Groups/1.html">Problem 1</a>, <a href="https://lucaman99.github.io/munkres/Top_Groups/3.html">Problem 3</a></p>
-    <p>Section 24: <a href="https://lucaman99.github.io/munkres/24/4.html">Problem 4</a></p>
+    <p>Section 23: <a href="https://lucaman99.github.io/munkres/23/index.html">Solutions</a></p>
+    <p>Section 24: <a href="https://lucaman99.github.io/munkres/24/4.html">Problem 4</a>, <a href="https://lucaman99.github.io/munkres/24/10.html">Problem 10</a></p>
+    <p>Section 25: <a href="https://lucaman99.github.io/munkres/25/4.html">Problem 4</a>, <a href="https://lucaman99.github.io/munkres/25/10.html">Problem 10</a></p>
+    <p>Section 26: <a href="https://lucaman99.github.io/munkres/26/index.html">Solutions</a></p>
+    <p>Section 27: <a href="https://lucaman99.github.io/munkres/27/index.html">Solutions</a></p>
+    <p>Section 28: <a href="https://lucaman99.github.io/munkres/28/index.html">Solutions</a></p>
     <br><br><br>
     </div>
 </center>
